--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,44 @@
 /* место для вашего кода */
+
+.header {
+  display: flex;
+  justify-content: space-around; /* или between */
+  align-items: center;
+  margin: 92px 0 0;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__links-list {
+  display: flex;
+  justify-content: space-between;
+  list-style: circle;
+}
+
+.header__links-list-item {
+  padding: 0 30px 0 0;
+}
+
+.header__links-list-item:last-child {
+  padding: 0;
+}
+
+.header__links-list-item-no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  text-underline-offset: 5px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
