--- a/styles/global.css
+++ b/styles/global.css
@@ -12,6 +12,7 @@ body {
   font-size: 20px;
   font-weight: 400;
   font-style: normal;
+  line-height: normal;
   color: #000;
   background-color: #fff;
   text-rendering: optimizeLegibility;
