--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
   font-size: 18px;
   line-height: 24.3px;
   justify-self: end;
-
+  text-underline-offset: 5px;
   font-style: normal;
 }
 
@@ -12,7 +12,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   place-items: center;
-  margin: 92px 52px 0;
+  margin: 98px 52px 0;
 }
 
 .header__menu {
@@ -25,14 +25,7 @@
   display: flex;
   justify-content: space-between;
   list-style: circle;
-}
-
-.header__links-list-item {
-  padding: 0 34px 0 0;
-}
-
-.header__links-list-item:last-child {
-  padding: 0;
+  gap: 32px;
 }
 
 .header__links-list-item-no-bullit {
@@ -59,12 +52,100 @@
 }
 
 .cover {
+  margin: 99px 0 auto;
+
+
+
+}
+
+
+
+.cover__overlay {
+
   position: relative;
-  margin: 93px 0 auto;
-  width: 1440px;
+  max-width: 1440px;
   height: 757px;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  opacity: 1;
+  z-index: -1;
+}
+
+
+.cover__overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.5);
+  z-index: -1;
+
+}
+
+
+
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 165px 0 147px 0;
+  color: #FFF;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115%;
+  /* 115px */
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  z-index: 3;
+
+}
+
+
+.aligned-text {
+  display: block;
+  text-align: start;
+
+}
+
+
+.aligned-text_center {
+  text-align: center;
+  display: block;
+  padding: 14px 0 0;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: end;
+}
+
+.cover__description-text {
+
+  color: #FFF;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  /* 127.273% */
+  text-transform: uppercase;
+
+
+}
+
+.cover__button {
+  text-align: center;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+
 }
