--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,33 @@
-/* место для вашего кода */
+/* _____________ ОБЩИЕ БЛОКИ ________________________ */
 
 .address {
   font-size: 18px;
   line-height: 24.3px;
-  justify-self: end;
+
   text-underline-offset: 5px;
   font-style: normal;
 }
+
+.overlay {
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 1;
+  z-index: -1;
+}
+
+.overlay::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 0.5);
+  z-index: -1;
+}
+/* _________________________________________________ */
 
 .header {
   display: grid;
@@ -51,31 +72,18 @@
   height: 105px;
 }
 
+.header__address {
+  justify-self: end;
+}
+
 .cover {
   margin: 99px 0 auto;
 }
 
 .cover__overlay {
-  position: relative;
   max-width: 1440px;
   height: 757px;
   background-image: url(../images/cover.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 1;
-  z-index: -1;
-}
-
-.cover__overlay::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(0 0 0 / 0.5);
-  z-index: -1;
 }
 
 .cover__title {
@@ -87,7 +95,6 @@
   font-size: 100px;
   font-weight: 700;
   line-height: 115%;
-  /* 115px */
   letter-spacing: 30px;
   text-transform: uppercase;
   z-index: 3;
@@ -112,61 +119,148 @@
 .cover__description-text {
   color: #fff;
   text-align: center;
-  font-family: Raleway;
   font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
   line-height: 28px;
-  /* 127.273% */
   text-transform: uppercase;
 }
 
 .cover__button {
   text-align: center;
-  font-family: Raleway;
   font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
   line-height: normal;
   text-transform: uppercase;
 }
 
 .lots {
-  margin: 180px 50px 0;
+  margin: 166px 50px 0;
 }
 
 .lots__heading {
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
+  padding: 0 0 0 40px;
 }
 
 .lots__card-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(430px, 0fr));
   gap: 25px;
+  justify-content: center;
+  margin: 30px auto;
+  list-style: none;
+  color: #000;
 }
 
 .lots__card-list-item {
-  width: 430px;
-  height: 450px;
   display: flex;
+  justify-content: space-between;
+  text-align: left;
+  height: 450px;
+  margin: 0 auto;
 }
 
 .lots__card-link {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  text-decoration: none;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+}
+
+.lots__card-title {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+  margin: 50px 40px auto;
+}
+
+.lots__card-text {
+  color: #fff;
+  line-height: 120%;
+  align-self: center;
+  margin: auto 40px 50px;
+}
+
+.lots__look-more-link {
+  margin: 0 0 0 40px;
+  text-underline-offset: 5px;
+}
+
+.footer {
+  margin: 180px 50px 90px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+}
+
+.footer__address {
+  justify-self: start;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: space-between;
+  justify-self: center;
+}
+
+.footer__links-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  list-style: none;
+  text-align: center;
+}
+
+.footer__links-list-item-no-bullit {
+  list-style: none;
+}
+
+.footer__link {
+  text-underline-offset: 5px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.footer__link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  text-align: center;
+  gap: 47px;
+  place-items: center;
+  justify-self: end;
+}
+
+.footer__social-list-item {
+}
+
+.footer__social-link {
+}
+
+.footer__social-icon {
+  width: 100%;
+  height: 48px;
 }
