--- a/styles/style.css
+++ b/styles/style.css
@@ -204,6 +204,51 @@
   text-underline-offset: 5px;
 }
 
+.about {
+  margin: 182px 50px 0;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: row;
+}
+
+.about__logo-image {
+  width: 240px;
+  height: 114px;
+  align-self: center;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  margin: 0 90px;
+  width: 240px;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.about__container {
+  display: flex;
+  flex-flow: column wrap;
+  margin: 100px 0 0;
+  width: 100%;
+  height: 100%;
+  align-self: flex-end;
+}
+
+.about__title {
+  align-self: stretch;
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.about__text {
+  margin: 100px 0 0;
+}
+
 .footer {
   margin: 180px 50px 90px;
   display: grid;
